NO-JIRA replace Collectors.toList to Stream.toList