@@ -25,7 +25,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.sonar.server.es.BaseDoc;
@@ -118,10 +117,10 @@ public class ProjectMeasuresDoc extends BaseDoc {
   public ProjectMeasuresDoc setMeasuresFromMap(Map<String, Double> measures) {
     setMeasures(
       measures.entrySet().stream()
-        .map(entry -> ImmutableMap.<String, Object>of(
+        .map(entry -> Map.<String, Object>of(
           SUB_FIELD_MEASURES_KEY, entry.getKey(),
           SUB_FIELD_MEASURES_VALUE, entry.getValue()))
-        .collect(Collectors.toList()));
+        .toList());
     return this;
   }
 
@@ -142,10 +141,10 @@ public class ProjectMeasuresDoc extends BaseDoc {
   public ProjectMeasuresDoc setNclocLanguageDistributionFromMap(Map<String, Integer> distribution) {
     setNclocLanguageDistribution(
       distribution.entrySet().stream()
-        .map(entry -> ImmutableMap.<String, Object>of(
+        .map(entry -> Map.<String, Object>of(
           SUB_FIELD_DISTRIB_LANGUAGE, entry.getKey(),
           SUB_FIELD_DISTRIB_NCLOC, entry.getValue()))
-        .collect(Collectors.toList()));
+        .toList());
     return this;
   }
 
